@@ -17,8 +17,6 @@ project: build_files {
     command              = $(TAO_IDL)
     libpath              = $(ACE_ROOT)/lib
     inputext             = .idl
-    source_pre_extension = C
-    header_pre_extension = C
     source_outputext     = .cpp, .cxx, .cc, .C
     header_outputext     = .h, .hpp, .hxx, .hh
     keyword idlflags     = commandflags
@@ -33,6 +31,9 @@ project: build_files {
 
     // Source related options
     optional(source_pre_extension) {
+      commandflags(!-Ssc) += C
+    }
+    optional(source_pre_extension) {
       commandflags(!-SS && !-oS) += S
     }
     optional(source_pre_extension) {
@@ -43,6 +44,9 @@ project: build_files {
     }
     optional(header_pre_extension) {
       commandflags(!-oS) += S
+    }
+    optional(header_pre_extension) {
+      commandflags(!-Sch) += C
     }
 
     // Other
