@@ -1183,18 +1183,34 @@ also receives other options that are specific to it.<p>
         just suppresses it without looking at any possible contents;</td>
   </tr>
 
-  <tr><a name="Ssi">
-    <td><tt>-Ssi</tt></td>
+  <tr><a name="Sch">
+    <td><tt>-Sch</tt></td>
 
-    <td>Suppress generation of the server inline file.</td>
+    <td>Suppress generation of the client header file.</td>
     <td>This option doesn't check whether something is generated in the file. It
         just suppresses it without looking at any possible contents;</td>
   </tr>
 
-  <tr><a name="Ssc">
-    <td><tt>-Ssc</tt></td>
+  <tr><a name="Ssi">
+    <td><tt>-Ssi</tt></td>
 
-    <td>Suppress generation of the server skeleton file.</td>
+    <td>Suppress generation of the servant inline file.</td>
+    <td>This option doesn't check whether something is generated in the file. It
+        just suppresses it without looking at any possible contents;</td>
+  </tr>
+
+  <tr><a name="SS">
+    <td><tt>-SS</tt></td>
+
+    <td>Suppress generation of the servant skeleton file.</td>
+    <td>This option doesn't check whether something is generated in the file. It
+        just suppresses it without looking at any possible contents;</td>
+  </tr>
+
+  <tr><a name="Ssh">
+    <td><tt>-Ssh</tt></td>
+
+    <td>Suppress generation of the servant header file.</td>
     <td>This option doesn't check whether something is generated in the file. It
         just suppresses it without looking at any possible contents;</td>
   </tr>
